cambios de vista

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -7,7 +7,7 @@ import { URLS_MAP } from "../../consts"
 <div class="mb-[118px]">
   <article
     id="header-container"
-    class="fixed top-0 left-0 w-full bg-background/80 backdrop-blur-md border-b border-borderColor-gray z-20 transition-all"
+    class="fixed top-0 left-0 w-full bg-background/80 backdrop-blur-md z-20 transition-all"
   >
     <div
       id="header-content"
