--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const { title, class: className } = Astro.props
   </head>
 
   <body
-    class="dark:bg-background dark:text-textColor-secondary break-words overflow-x-hidden"
+    class="dark:bg-background dark:text-textColor-secondary break-words overflow-x-hidden selection:bg-textColor-accent selection:text-background"
   >
     <Header />
     <slot name="header" />
