--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -55,9 +55,9 @@ import songs from "../data/songs.json"
         <h2>Música</h2>
         <p>
           Desde los 8 años que llevo tocando la guitarra española. También
-          aprendí la guitarra eléctrica, el ukelele, el piano y el bajo. Nunca
-          me he enfocado en dominar estos instrumentos, sobre todo lo que quería
-          era hacer música en <strong>GarageBand</strong> y <strong
+          aprendí a tocar la guitarra eléctrica, el ukelele, el piano y el bajo.
+          Nunca me enfoqué en dominar estos instrumentos, sobre todo lo que
+          quería era hacer música en <strong>GarageBand</strong> y <strong
             >FLStudio</strong
           >.
         </p>
@@ -82,23 +82,22 @@ import songs from "../data/songs.json"
         <section>
           <h3>Cine</h3>
           <p>
-            Hace pocos años me adentré con fuerza en el cine, sobretodo la
-            dirección cinematográfica con directores como <strong
+            Hace pocos años me adentré con fuerza en el cine, sobre todo me
+            gustó la dirección cinematográfica con directores como <strong
               >Stanley Kubrick</strong
             > o <strong>Bong Joon-ho</strong>. Disfruto mucho ver películas de
-            todo tipo y también ver vídeos analizandolas.
+            todo tipo y también ver vídeos analizándolas.
           </p>
           <Movies />
         </section>
         <section>
           <h3>Libros</h3>
           <p>
-            Empezar a leer fue una decisión muy conciente pues consideraba que
-            sería un buen hábito. Empezé con la ciencia ficción, después empezé
-            a leer mucho sobre divulgación científica y matemática; sobre todo
+            Empezar a leer fue una decisión muy consiente pues consideraba que
+            sería un buen hábito. Comencé con la ciencia ficción, después me dio
+            por leer mucho sobre divulgación científica y matemática; sobre todo
             leía a <strong>Issac Asimov</strong>. Aunque no soy mucho de
-            fantasía, he disfrutado mucho de libros de <strong
-              >Brandon Sanderson</strong
+            fantasía, disfruto mucho leyendo a <strong>Brandon Sanderson</strong
             > y
             <strong>Michael Ende</strong>.
           </p>
@@ -109,17 +108,18 @@ import songs from "../data/songs.json"
       <section>
         <h2>Programación</h2>
         <p>
-          Empezé a programar a los 14, pero no fue hastas los 17 años que me lo
+          Empezé a programar a los 14 año, pero no fue hastas los 17 que me lo
           tomé en serio. He programado en C, Python, Lua, PHP, C# y Rust; pero
           los lenguajes que más uso actualmente son <strong>JavaScript</strong>
            y <strong>TypeScript</strong>. Trabajo en su mayoria con <strong
             >Angular</strong
-          >, <strong>Bootstrap</strong>
-          <strong>NodeJs</strong>, <strong>Express</strong> y <strong
+          >, <strong>Bootstrap</strong>,
+          <strong>NodeJs</strong>, <strong>Express</strong>, <strong
             >MongoDB</strong
-          >; pero también he visto (un poco más o un poco menos) Deno, Bun,
-          Astro, TailwindCSS, Fresh React, Flask, Nestjs y MySQL. No solo quiero
-          aprender desarrollo web, así que aprendí otras cosas como
+          > y <strong>Mongoose</strong>; pero también he visto (un poco más o un
+          poco menos) de Deno, Bun, Astro, TailwindCSS, Fresh, React, Flask,
+          Nestjs, MySQL y Prisma. No solo quise aprender desarrollo web, así que
+          aprendí otras cosas como
           <strong>Docker</strong> y Rust para tocar más ramas.
         </p>
         <ul class="my-6 space-y-4 list-disc pl-8">
