--- a/src/components/Blog/BlogPost.astro
+++ b/src/components/Blog/BlogPost.astro
@@ -1,9 +1,9 @@
 ---
-import RightArrowIcon from '../../icons/RightArrowIcon.astro'
-import FormattedDate from '../../components/FormattedDate.astro'
-import type { HTMLAttributes } from 'astro/types'
+import RightArrowIcon from "../../icons/RightArrowIcon.astro"
+import FormattedDate from "../../components/FormattedDate.astro"
+import type { HTMLAttributes } from "astro/types"
 
-interface Props extends HTMLAttributes<'a'> {
+interface Props extends HTMLAttributes<"a"> {
   slug: string
   date: Date
   title: string
@@ -19,19 +19,6 @@ const { slug, date, title, description, tags } = Astro.props
     <p class="sm:font-bold md:text-lg text-textColor-teriary">
       <FormattedDate date={date} />
     </p>
-    <ul
-      class="hidden mt-4 sm:flex sm:flex-wrap sm:justify-end sm:gap-x-2 sm:gap-y-4"
-    >
-      {
-        tags.map((tag) => (
-          <li>
-            <span class="border border-borderColor-gray px-2 py-1 rounded-lg">
-              {tag}
-            </span>
-          </li>
-        ))
-      }
-    </ul>
   </article>
   <article class="sm:flex-1">
     <p class="text-2xl md:text-3xl text-textColor-primary mb-1 md:mb-2">
@@ -44,6 +31,17 @@ const { slug, date, title, description, tags } = Astro.props
     </p>
     <p>{description}</p>
     <p class="mt-4">
+      <ul class="hidden mb-4 sm:flex w-full sm:flex-wrap justify-start sm:gap-x-2 sm:gap-y-4">
+        {
+          tags.map((tag) => (
+            <li>
+              <span class="border border-borderColor-gray px-2 py-1 rounded-lg">
+                {tag}
+              </span>
+            </li>
+          ))
+        }
+      </ul>
       <span class="text-textColor-accent group">
         <a
           href={`/blog/${slug}`}
