--- a/src/components/Header/HeaderNav.astro
+++ b/src/components/Header/HeaderNav.astro
@@ -4,11 +4,9 @@
 
 <article
   id="scroll-elem"
-  class="top-element scroll-visibility fixed top-[64px] left-0 w-full bg-background/80 backdrop-blur-md border-b border-borderColor-gray pt-3 md:pt-6 pb-1 transition-all z-10 up"
+  class="top-element scroll-visibility fixed top-[64px] md:top-[76px] left-0 w-full bg-background/80 backdrop-blur-md pt-3 md:pt-4 pb-1 transition-all z-10 up"
 >
-  <nav
-    class="flex md:text-base justify-center font-semibold "
-  >
+  <nav class="flex md:text-base justify-center font-semibold">
     <slot />
   </nav>
 </article>
