--- a/src/components/Katex.astro
+++ b/src/components/Katex.astro
@@ -1,5 +1,5 @@
 ---
-import katex from 'katex'
+import katex from "katex"
 
 interface Props {
   f: string
@@ -12,11 +12,7 @@ const html = katex.renderToString(f, { throwOnError: false })
 ---
 
 <span
-  class:list={[
-    'text-textColor-primary',
-    { 'block text-center my-4': !inline },
-    customClasses,
-  ]}
+  class:list={[{ "block text-center my-4": !inline }, customClasses]}
   set:html={html}
 />
 
