--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,6 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
 <BaseLayout title="404">
+  <meta slot="meta" name="robots" content="none" />
   <div class="max-w-screen-sm mx-auto">
     <section class="min-h-screen grid content-center relative">
       <div class="relative">
