--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 
-<BaseLayout title="404">
+<BaseLayout title="404" description="">
   <meta slot="meta" name="robots" content="none" />
   <div class="max-w-screen-sm mx-auto">
     <section class="min-h-screen grid content-center relative">
