--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,17 +7,24 @@ import { SITE } from "../consts.ts"
 import songs from "../data/songs.json"
 ---
 
-<BaseLayout title={`${SITE.TITLE} · About`}>
+<BaseLayout
+  title={`${SITE.TITLE} · About`}
+  description="Sobre Michelangelo y sus gustos como introducción a su blog personal"
+>
+  <meta slot="meta" name="robots" content="noindex" />
   <div class="max-w-screen-lorem mx-auto">
     <section class="pt-12 pb-14 md:pt-16 md:pb-20">
       <div class="relative">
-        <div
+        <!-- <div
           class="absolute w-44 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
         >
         </div>
         <h1
           class="text-4xl md:text-5xl font-bold gradient background-gradient-effect text-transparent bg-clip-text"
         >
+          About <small set:html="<コ:彡" />
+        </h1> -->
+        <h1 class="text-4xl md:text-5xl font-bold text-textColor-accent-indigo">
           About <small set:html="<コ:彡" />
         </h1>
       </div>
@@ -187,7 +194,7 @@ import songs from "../data/songs.json"
     aspect-ratio: calc(attr(width) / attr(height));
   }
 
-  .gradient {
+  /* .gradient {
     background-image: linear-gradient(
       135deg,
       hsl(269deg 97% 71%) 0%,
@@ -208,5 +215,5 @@ import songs from "../data/songs.json"
       hsl(354deg 93% 74%) 81%,
       hsl(0deg 80% 75%) 99%
     );
-  }
+  } */
 </style>
