--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,18 +10,23 @@ const blog = (await getCollection("blog")).sort(
 )
 ---
 
-<BaseLayout title={`${SITE.TITLE} · Blog`}>
-  <meta slot="meta" name="robots" content="none" />
+<BaseLayout title={`${SITE.TITLE} · Blog`} description="Artículos disponibles">
+  <meta slot="meta" name="robots" content="noindex" />
   <div class="max-w-screen-lorem mx-auto">
     <section class="pt-12 pb-14 md:pt-16 md:pb-20">
       <div class="relative">
-        <div
+        <!-- <div
           class="absolute w-24 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
         >
         </div>
         <h1
           class="text-4xl md:text-5xl font-bold gradient background-gradient-effect text-transparent bg-clip-text"
         >
+          Blog <a href="/rss.xml" target="_blank"
+            ><i><RssIcon class="inline text-textColor-accent-sky" /></i></a
+          >
+        </h1> -->
+        <h1 class="text-4xl md:text-5xl font-bold text-textColor-accent-sky">
           Blog <a href="/rss.xml" target="_blank"
             ><i><RssIcon class="inline text-textColor-accent-sky" /></i></a
           >
@@ -45,7 +50,7 @@ const blog = (await getCollection("blog")).sort(
   </div>
 </BaseLayout>
 
-<style>
+<!-- <style>
   .gradient {
     background-image: linear-gradient(
       315deg,
@@ -66,4 +71,4 @@ const blog = (await getCollection("blog")).sort(
       hsl(221deg 76% 66%) 100%
     );
   }
-</style>
+</style> -->
