--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,8 +4,8 @@ import HeaderLink from "../HeaderLink.astro"
 import { URLS_MAP } from "../../consts"
 ---
 
-<div class="mb-[118px]">
-  <article class="fixed top-0 left-0 w-full bg-background/80 z-20">
+<div class="mb-[128px]">
+  <article class="fixed top-0 left-0 w-full bg-background/80 backdrop-blur-md z-20">
     <div
       class="max-w-screen-2xl mx-auto flex justify-between py-4 px-6 md:px-8"
     >
