--- a/src/components/ui/Quote.astro
+++ b/src/components/ui/Quote.astro
@@ -9,7 +9,7 @@ const { quote, cite, class: className } = Astro.props
 ---
 
 <div
-  class="sm:bg-quotesColor/60 sm:px-4 rounded-lg border-l-2 sm:border-r-2 border-borderColor-accent/60"
+  class="sm:px-4 border-l-4 border-borderColor-accent"
 >
   <blockquote
     class:list={[
