--- a/src/components/GlobalStyles.astro
+++ b/src/components/GlobalStyles.astro
@@ -80,32 +80,48 @@
   }
 
   @font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/source-serif-pro-regular.woff2'), format('woff2');
+    font-family: "Pico8";
+    src: url("/fonts/pico-8-wide.ttf"), format("ttf");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/source-serif-pro-600.woff2'), format('woff2');
+    font-family: "Cascadia";
+    src: url("/fonts/CascadiaCodePL-Regular.woff2"), format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Source Serif Pro";
+    src: url("/fonts/source-serif-pro-regular.woff2"), format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: "Source Serif Pro";
+    src: url("/fonts/source-serif-pro-600.woff2"), format("woff2");
     font-weight: 600;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/source-serif-pro-700.woff2'), format('woff2');
+    font-family: "Source Serif Pro";
+    src: url("/fonts/source-serif-pro-700.woff2"), format("woff2");
     font-weight: 700;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: 'Source Serif Pro';
-    src: url('/fonts/source-serif-pro-italic.woff2'), format('woff2');
+    font-family: "Source Serif Pro";
+    src: url("/fonts/source-serif-pro-italic.woff2"), format("woff2");
     font-weight: normal;
     font-style: italic;
     font-display: swap;
