--- a/src/components/Header/HeaderNav.astro
+++ b/src/components/Header/HeaderNav.astro
@@ -1,5 +1,5 @@
 <article
-  class="top-element scroll-visibility fixed top-[64px] md:top-[76px] left-0 w-full bg-background/80 pt-3 md:pt-4 pb-1 z-10 up"
+  class="top-element scroll-visibility fixed top-[64px] md:top-[76px] left-0 w-full bg-background/80 backdrop-blur-md pt-3 md:pt-4 pb-1 z-10 up"
 >
   <nav class="flex md:text-base justify-center font-semibold">
     <slot />
