--- a/src/components/Katex.astro
+++ b/src/components/Katex.astro
@@ -11,10 +11,7 @@ const { f, inline = true, customClasses } = Astro.props
 const html = katex.renderToString(f, { throwOnError: false })
 ---
 
-<span
-  class:list={[{ "block text-center my-4": !inline }, customClasses]}
-  set:html={html}
-/>
+<span class:list={[{ full: !inline }, customClasses]} set:html={html} />
 
 <link
   rel="stylesheet"
@@ -22,3 +19,9 @@ const html = katex.renderToString(f, { throwOnError: false })
   integrity="sha384-WsHMgfkABRyG494OmuiNmkAOk8nhO1qE+Y6wns6v+EoNoTNxrWxYpl5ZYWFOLPCM"
   crossorigin="anonymous"
 />
+
+<style>
+  .full {
+    @apply block text-center my-4 text-textColor-primary;
+  }
+</style>
