--- a/src/components/seo/OpenGraphTags.astro
+++ b/src/components/seo/OpenGraphTags.astro
@@ -33,7 +33,7 @@ const {
 <meta property="og:locale" content="es" />
 <meta property="og:description" content={description} />
 <meta property="og:site_name" content={site_name} />
-<meta property="og:image" content={`${Astro.site}${image}`} />
+<meta property="og:image" content={`${SITE.URL}${image}`} />
 <meta property="og:image:alt" content={imageAlt} />
 <meta property="og:image:width" content={imageWidth} />
 <meta property="og:image:height" content={imageHeight} />
