--- a/src/components/seo/TwitterTags.astro
+++ b/src/components/seo/TwitterTags.astro
@@ -28,5 +28,5 @@ const {
 <meta property="twitter:card" content={card} />
 <meta property="twitter:site" content={site} />
 <meta property="twitter:creator" content={creator} />
-<meta property="twitter:image" content={image} />
+<meta property="twitter:image" content={`${SITE.URL}${image}`} />
 <meta property="twitter:image:alt" content={imageAlt} />
