--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import songs from "../data/songs.json"
 >
   <meta slot="meta" name="robots" content="noindex" />
   <div class="max-w-screen-lorem mx-auto">
-    <section class="pt-12 pb-14 md:pt-16 md:pb-20">
+    <section class="pt-12 pb-14">
       <div class="relative">
         <!-- <div
           class="absolute w-44 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
@@ -24,7 +24,7 @@ import songs from "../data/songs.json"
         >
           About <small set:html="<コ:彡" />
         </h1> -->
-        <h1 class="text-4xl md:text-5xl font-bold text-textColor-accent-indigo">
+        <h1 class="text-5xl md:text-6xl font-bold text-textColor-primary">
           About <small set:html="<コ:彡" />
         </h1>
       </div>
