--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ const blog = (await getCollection("blog")).sort(
 <BaseLayout title={`${SITE.TITLE} · Blog`} description="Artículos disponibles">
   <meta slot="meta" name="robots" content="noindex" />
   <div class="max-w-screen-lorem mx-auto">
-    <section class="pt-12 pb-14 md:pt-16 md:pb-20">
+    <section class="pt-12 pb-14">
       <div class="relative">
         <!-- <div
           class="absolute w-24 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
@@ -26,9 +26,9 @@ const blog = (await getCollection("blog")).sort(
             ><i><RssIcon class="inline text-textColor-accent-sky" /></i></a
           >
         </h1> -->
-        <h1 class="text-4xl md:text-5xl font-bold text-textColor-accent-sky">
+        <h1 class="text-5xl md:text-6xl font-bold text-textColor-primary">
           Blog <a href="/rss.xml" target="_blank"
-            ><i><RssIcon class="inline text-textColor-accent-sky" /></i></a
+            ><i><RssIcon class="inline" /></i></a
           >
         </h1>
       </div>
