--- a/src/components/Index/PostPreview.astro
+++ b/src/components/Index/PostPreview.astro
@@ -34,6 +34,6 @@ const dateConfig: ToLocaleDateStringConfig = {
     >
       <strong set:html={title} />
     </p>
-    <p class="hidden md:inline-block" set:html={description} />
+    <p class="hidden md:inline-block md:text-lg" set:html={description} />
   </a>
 </article>
