--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,21 +9,12 @@ import songs from "../data/songs.json"
 
 <BaseLayout
   title={`${SITE.TITLE} · About`}
-  description="Sobre Michelangelo y sus gustos como introducción a su blog personal"
+  description="Llamadme Michelangelo. Soy alguien con muchos intereses, y que a veces se obseciona con algún tema en particular durante días o semanas sin ningún motivo."
 >
   <meta slot="meta" name="robots" content="noindex" />
   <div class="max-w-screen-lorem mx-auto">
     <section class="pt-12 pb-14">
       <div class="relative">
-        <!-- <div
-          class="absolute w-44 h-20 gradient blur-background-effect opacity-25 top-0 left-4 blur-3xl pointer-events-none"
-        >
-        </div>
-        <h1
-          class="text-4xl md:text-5xl font-bold gradient background-gradient-effect text-transparent bg-clip-text"
-        >
-          About <small set:html="<コ:彡" />
-        </h1> -->
         <h1 class="text-5xl md:text-6xl font-bold text-textColor-primary">
           About <small set:html="<コ:彡" />
         </h1>
