--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -7,7 +7,7 @@ import GithubIcon from "../../icons/GithubIcon.astro"
 <footer
   class="border-t border-borderColor-gray mb-12 mt-36"
 >
-  <div class="p-6 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center">
+  <div class="p-6 mt-4 md:px-0 max-w-screen-lorem mx-auto flex justify-between items-center">
     <div class="w-28">
       {
         URLS_MAP.map(({ href, title }) => (
