--- a/src/components/Index/PostsByYear.astro
+++ b/src/components/Index/PostsByYear.astro
@@ -23,8 +23,8 @@ const years = Array.from(new Set(blogPosts.map((post) => post.year)))
 
 {
   years.map((year) => (
-    <article class="mb-12 mt-20 max-w-screen-sm">
-      <p class="text-xl md:2xl text-textColor-accent mb-4">
+    <article class="mb-12 mt-24 max-w-screen-sm">
+      <p class="text-xl md:text-2xl text-textColor-primary mb-4">
         <strong>
           <time>{year}</time>
         </strong>
