--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -26,7 +26,9 @@ const readingTime = time && `${time - 1}-${time + 1}`
 
 <PostLayout post={post}>
   <div class="max-w-screen-lg mx-auto">
-    <p class="text-left mb-4 hidden md:block text-textColor-accent font-bold text-lg">
+    <p
+      class="text-left mb-4 hidden md:block text-textColor-accent font-bold text-lg"
+    >
       <a href="/blog" class="group">
         <i>
           <ChevronLeft
