articulo sobre porque las matematicas no son una ciencia y cambio de tema a claro

--- a/src/components/Katex.astro
+++ b/src/components/Katex.astro
@@ -22,6 +22,6 @@ const html = katex.renderToString(f, { throwOnError: false })
 
 <style>
   .full {
-    @apply block text-center my-4 text-textColor-primary;
+    @apply block text-center my-4 text-textColor-primary overflow-x-scroll;
   }
 </style>
