--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -56,7 +56,7 @@ const readingTime = time && `${time - 1}-${time + 1}`
       <div class="bg-borderColor-gray h-[2px]"></div>
     </div>
     <article
-      class="prose prose-lorem dark:prose-invert md:prose-xl prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center md:prose-h2:pt-8 md:prose-h2:mb-6 md:prose-h2:text-center prose-h3:text-2xl prose-h3:italic prose-h3:mt-12 max-w-screen-md mx-auto"
+      class="prose prose-lorem prose-invert sm:prose-lg md:prose-xl prose-code:before:content-[''] prose-code:after:content-[''] prose-h1:text-center md:prose-h2:pt-8 md:prose-h2:mb-6 md:prose-h2:text-center prose-h3:text-xl md:prose-h3:text-2xl prose-h3:italic prose-h3:mt-12 max-w-screen-md mx-auto"
       id="content"
     >
       <Content />
